Added all main files for the Not Christmas website

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,15 @@
     <title>Not christmas</title>
   </head>
   <body>
+    <h2>Currently it's:</h2>
     <h1>Not christmas</h1>
+
+    <hr>
+
+    <h3>Buy the graphics update</h3>
+    <button onclick="document.location = 'cost.html'">Buy Now</button>
+
+    <hr>
+    <h4>The following website is stolen from the ideas of the Not Games Devs who originally planned to make this an app but insted I have made this a website. If you have a problem with this you can do what we call fuck off. If you pirate this website that is so low we hope the same somali pirates from NotCOD come and slap you in your face until you realize this is open source. If you whant to spend your money I recommend buying the game not for broadcast. It's a really good game and definitely worth playing. Seriously you are wasting your time reading this nonsens and not going and playing it. BTW well done for reading this far. If you are viewing this website on Chrismas and it says Not Chrismas it's because I am far to lazzy to learn Java Script well enough to mess with time zones. Fuck that shit I have better things to do seriously. Just thinking about it makes me sick about having to make it work with diffrent time zones So just a warning no Im not going to fix it. Im done with this joke. Im not spending more then 10 mins on this. </h4>
   </body>
 </html>
